user.css
:root {
  --border-radius-1: 8px;
  --border-radius-2: 4px;
  --border-radius-3: 4px;
  --glue-font-weight-normal: 400;
  --glue-font-weight-bold: 600;
  --glue-font-weight-black: 700;
  --scrollbars: unset;
  --scrollbar-vertical-size: 8px;
  --filter-brightness: 1;
  --green: #1db954;
}

* {
  font-family: 'Segoe UI', sans-serif !important;
  box-shadow: none !important;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-position: center;
  -webkit-mask-size: contain;
}

.Root__main-view {
  z-index: 0;
  background-color: var(--spice-main);
  height: 100%;
}

.os-scrollbar {
  display: var(--scrollbars);
}

.os-scrollbar-handle {
  border-radius: 50px;
  background: var(--spice-button-disabled) !important;
}

.os-theme-spotify>.os-scrollbar-vertical {
  margin-right: 2px;
}

.os-scrollbar-horizontal {
  display: none;
}

.main-home-homeHeader,
.main-actionBarBackground-background {
  background-image: none;
}

.main-actionBarBackground-background,
.main-home-homeHeader,
.x-entityHeader-overlay,
.x-actionBarBackground-background {
  background-color: var(--spice-main) !important;
}

.main-topBar-background,
.main-topBar-overlay {
  background-color: var(--spice-sidebar) !important;
  opacity: 1 !important;
}

.main-entityHeader-overlay {
  background-image: linear-gradient(to bottom, rgb(39 39 39 / 0%), var(--spice-main));
}

.x-actionBarBackground-background,
.x-entityHeader-overlay,
.We1fExPHxLIRmV0rZGNo {
  background: none !important;
}


/* remove dividers */

.main-trackList-trackListHeaderRow,
.main-trackCreditsModal-header {
  border-bottom: none;
}

.now-playing-bar-container,
._6e96ad0ba78d75ffb2a0156aa1834a21-scss {
  border-top: none;
}

.main-rootlist-rootlistDivider,
.main-contextMenu-dividerBefore::before,
.main-contextMenu-dividerAfter::after,
.show-episodeList-divider,
.main-rootlist-rootlistDividerContainer {
  display: none;
}


/* cards */

.main-shelf-shelfGrid,
.view-homeShortcutsGrid-grid {
  overflow: visible;
}

.main-cardImage-image,
.main-cardImage-imageWrapper,
.OALAQFKvC7XQOVYpklB4 img {
  border-radius: var(--border-radius-2);
}

.main-card-card,
.x-heroCategoryCard-HeroCategoryCard,
.x-categoryCard-CategoryCard,
.main-heroCard-card,
.OALAQFKvC7XQOVYpklB4 {
  border-radius: var(--border-radius-1);
}

.main-card-card,
.main-heroCard-card,
.x-searchResultsTracks-root>.main-gridContainer-gridContainer,
.main-trackList-indexable,
.view-homeShortcutsGrid-shortcut,
.OALAQFKvC7XQOVYpklB4,
.L4WROPnQ7MPGhylvVyxd {
  background-color: var(--spice-card);
  box-shadow: 0px 0px 6px 0px var(--spice-layer-shadow) !important;
  border: var(--spice-contour) solid 1px;
}

.main-tag-container {
  font-family: "Segoe UI", sans-serif !important;
  font-weight: 400;
  font-size: 10px;
  color: #463d3d !important;
}

.main-heroCardTag-root, ._8PRqRiYMqnyy_gN_fUD ._AxyaXOKl3GkvT212Vco {
  height: 24px;
  padding: 12px;
  margin-top: 8px;
}

.x-categoryCard-title,
.x-heroCategoryCard-heroTitle,
.collection-collectionEntityHeroCard-likedSongs div {
  color: var(--spice-alt-text);
}


/* transitions */

.main-card-card {
  transition: background-color 150ms ease;
}

.link-subtle {
  transition-duration: 150ms;
}


/* headers */

.Root__top-bar {
  position: absolute !important;
  width: 100vw !important;
  grid-area: none;
  z-index: 4 !important;
}

.main-topBar-container {
  max-width: 100vw;
}

.main-entityHeader-withBackgroundImage {
  padding: 0 32px 24px;
  margin-top: 48px;
}

.main-entityHeader-title {
  font-size: unset;
  font-family: 'Segoe UI', sans-serif !important;
  font-weight: 500;
  overflow: visible !important;
}

h1,
h2,
h3,
.main-shelf-title,
.main-entityHeader-topbarTitle,
.main-type-canon,
.main-type-bass,
.main-cardHeader-text.main-type-alto,
.x-searchResultsTracks-title {
  font-family: 'Segoe UI', sans-serif !important;
  font-weight: 500;
  letter-spacing: 0.1px !important;
  overflow: visible !important;
  margin-bottom: 4px;
  white-space: normal;
}

.main-seeAll-link {
  margin-bottom: 10px;
}

.main-topBar-topbarContent {
  position: absolute;
  display: -webkit-box;
  left: 50%;
  top: 5px;
  transform: translate(-50%, 0%);
  padding: 6px;
}

.queue-tabBar-header {
  text-align: center;
  min-width: 500px;
}

.queue-tabBar-headerItemLink {
  transition: background-color ease-out 167ms;
}

.main-topBar-back {
  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_arrow_left_24_filled.svg');
  background-color: var(--spice-text) !important;
  padding: 5px;
  margin-left: 60px;
  width: 24px !important;
  height: 24px !important;
}

.main-topBar-forward {
  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_arrow_right_24_filled.svg');
  background-color: var(--spice-text) !important;
  padding: 5px;
  width: 24px !important;
  height: 24px !important;
}

.main-userWidget-displayName,
.main-userWidget-chevron {
  display: none !important;
}


/* menus */

.main-contextMenu-menuItemButton,
.main-userWidget-dropDownMenuItemButton {
  border-radius: var(--border-radius-1);
  color: var(--spice-text) !important;
  height: 32px;
  padding-left: 8px;
}

.main-contextMenu-menuItem,
._60cb742e518d084c3c959007b9463b51-scss>li {
  margin: 2px 6px;
}

.main-contextMenu-menuItem:first-child,
._60cb742e518d084c3c959007b9463b51-scss> :first-child {
  margin: 6px 6px 2px;
}

.main-contextMenu-menuItem:last-child {
  margin: 2px 6px 6px;
}

._60cb742e518d084c3c959007b9463b51-scss> :last-child {
  margin: 2px 6px 8px;
}

.main-contextMenu-menu,
._60cb742e518d084c3c959007b9463b51-scss {
  border-radius: var(--border-radius-1);
  border: 1px solid var(--spice-layer-shadow);
  background-color: var(--spice-card);
}

.queue-tabBar-dropdownItemLink {
  color: var(--spice-text) !important;
}


/* buttons */

.icon {
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-position: center;
  margin: auto;
}
/* ... */

